finding perimeter of the shape